runned test on local

--- a/apiquest.ipynb
+++ b/apiquest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0b607511",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'<div style=\"display: block; margin: auto;  width: 600px; height: 500px; text-align: center; font-family: \\'Courier\\', cursive, sans-serif;\"><h1 style=\"color: 747474\">:( Application Error</h1><p style=\"color:#666\">If you are the application administrator, you can access the <a style=\"color: grey\"href=\"https://matdreamteam.scm.azurewebsites.net/detectors\">diagnostic resources</a>.</div>\\n'\n"
+      "b'{\"prediction\":\"virginica\",\"probability\":0.91}'\n"
      ]
     }
    ],
@@ -24,7 +24,7 @@
     "    'petal_width': 2.2\n",
     "}\n",
     "\n",
-    "response = requests.post('https://matdreamteam.azurewebsites.net/predict', json=new_measurement)\n",
+    "response = requests.post('http://127.0.0.1:8000/predict', json=new_measurement)\n",
     "print(response.content)"
    ]
   },
@@ -34,7 +34,19 @@
    "id": "d3cab422",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests \n",
+    "\n",
+    "new_measurement = {\n",
+    "    'sepal_length': 5.7,\n",
+    "    'sepal_width': 3.1,\n",
+    "    'petal_length': 4.9,\n",
+    "    'petal_width': 2.2\n",
+    "}\n",
+    "\n",
+    "response = requests.post('matdreamteam.azurewebsites.net/predict', json=new_measurement)\n",
+    "print(response.content)"
+   ]
   }
  ],
  "metadata": {
